--- a/portal.html
+++ b/portal.html
@@ -35,6 +35,14 @@ ul li:hover {
 ul li:active {
 	color: white;
 }
+div {
+	color: #00E600;
+	background: black;
+	text-align: center;
+	width: 80%;
+	margin: auto;
+	border-radius: 10px;
+}
 </style>
 </head>
 <body>
@@ -52,6 +60,11 @@ ul li:active {
 	<li><a href="./experimental/RandomBinGenerator.html">Random Binary Generator</a></li>
 	<li><a href="./experimental/sociablePairFinder.html">Sociable Pair Finder</a></li>
 </ul>
+
+<div>
+	<h5 style="color:blue">About the Developer</h5>
+	<p>SciPred is some random person who likes eating virtual cookies and playing Minecraft (when he's not hacking any game servers). He shoots Fortnite for entertainment and watches on YouTube for dividing by zero.</p>
+</div>
 
 </body>
 </html>
