--- a/portal.html
+++ b/portal.html
@@ -25,6 +25,7 @@ h1:hover {
 ul li {
 	transition: all 0.3s;
 	cursor: pointer;
+	max-width: 500px;
 }
 ul li:hover {
 	color: #00F600;
@@ -41,6 +42,7 @@ div {
 	text-align: center;
 	width: 80%;
 	margin: auto;
+	border: 2px solid black;
 	border-radius: 10px;
 }
 </style>
