--- a/portal.html
+++ b/portal.html
@@ -44,6 +44,7 @@ div {
 	margin: auto;
 	border: 2px solid black;
 	border-radius: 10px;
+	padding: 10px;
 }
 </style>
 </head>
@@ -65,7 +66,7 @@ div {
 
 <div>
 	<h5 style="color:blue">About the Developer</h5>
-	<p>SciPred is some random person who likes eating virtual cookies and playing Minecraft (when he's not hacking any game servers). He shoots Fortnite for entertainment and watches on YouTube for dividing by zero.</p>
+	<p>SciPred is some random person who likes eating virtual cookies and playing Minecraft (when he's not hacking any game servers). He shoots Fortnite for entertainment and watches on YouTube for dividing by zero. Whenever he's not looking at pictures of hobos, he wastes tons of paper trying to find the answer to 0 to the power of 0.</p>
 </div>
 
 </body>
