--- a/portal.html
+++ b/portal.html
@@ -52,6 +52,7 @@ div {
 <h1>Welcome To SciPred's Portal</h1>
 <h2>A Document for Exploring All of his Works</h2>
 <h3>Includes Everything Alpha, Beta, and Experimental.</h3>
+<h3 style="color:red">PLEASE NOTE: The guy is still working hard on farming Minecraft Skywars Coins, so updates may be delayed.</h3>
 
 <h4>MAJOR PROJECTS</h4>
 <ul>
