--- a/portal.html
+++ b/portal.html
@@ -57,6 +57,8 @@ div {
 <h4>MAJOR PROJECTS</h4>
 <ul>
 	<li><a href="./alpha/achv2.html">Achievofile</a></li>
+
+	<li><a href="./beta/SCPDCALC.html">SciPred's Calculator</a></li>
 </ul>
 
 <h4>EXPERIMENTAL</h4>
