--- a/portal.html
+++ b/portal.html
@@ -19,6 +19,10 @@ h1, h2, h3 {
 h1:hover {
 	color: green;
 }
+p {
+	opacity: 0;
+	transition: 0.5s;
+}
 ::-webkit-scrollbar {width:10px;}
 ::-webkit-scrollbar-track {background:black}
 ::-webkit-scrollbar-thumb {background:#00E600;}
@@ -76,8 +80,11 @@ div {
 <script>
 function openNav() {
 	document.getElementsByTagName('div')[0].style.width = "80%";
+	setTimeout(function(){
+		document.getElementsByTagName('p')[0].style.opacity = 1;
+	}, 500);
 }
-setTimeout(openNav, 100);
+setTimeout(openNav, 1000);
 </script>
 
 </body>
