--- a/portal.html
+++ b/portal.html
@@ -15,6 +15,7 @@ h1, h2, h3, h4, h5, h6, p, i, b, q, strong, span {
 }
 h1, h2, h3 {
 	text-align: center;
+	opacity: 0;
 }
 h1:hover {
 	color: green;
@@ -51,13 +52,21 @@ div {
 	padding: 10px;
 	transition: 0.5s;
 }
+section {
+	width: 100%;
+	height: 0;
+	border: 1px dashed black;
+}
 </style>
 </head>
 <body>
+
+<section>
 <h1>Welcome To SciPred's Portal</h1>
 <h2>A Document for Exploring All of his Works</h2>
 <h3>Includes Everything Alpha, Beta, and Experimental.</h3>
 <h3 style="color:red">PLEASE NOTE: The guy is still working hard on farming Minecraft Skywars Coins, so updates may be delayed.</h3>
+</section>
 
 <h4>MAJOR PROJECTS</h4>
 <ul>
@@ -80,9 +89,14 @@ div {
 <script>
 function openNav() {
 	document.getElementsByTagName('div')[0].style.width = "80%";
+	document.getElementsByTagName('section')[0].style.height = "30%";
 	setTimeout(function(){
 		document.getElementsByTagName('p')[0].style.opacity = 1;
 		document.getElementsByTagName('h5')[0].style.opacity = 1;
+		document.getElementsByTagName('h1')[0].style.opacity = 1;
+		document.getElementsByTagName('h2')[0].style.opacity = 1;
+		document.getElementsByTagName('h3')[0].style.opacity = 1;
+		document.getElementsByTagName('h3')[1].style.opacity = 1;
 	}, 500);
 }
 setTimeout(openNav, 1000);
