--- a/portal.html
+++ b/portal.html
@@ -9,6 +9,7 @@ html, body {
 	margin: 0;
 	background: #ddd;
 	font-family: sans-serif;
+	overflow-x: hidden;
 }
 h1, h2, h3, h4, h5, h6, p, i, b, q, strong, span {
 	cursor: default;
@@ -53,7 +54,7 @@ div {
 	transition: 0.5s;
 }
 section {
-	width: 100%;
+	width: 99.5%;
 	height: 0;
 	border: 1px dashed black;
 }
