--- a/portal.html
+++ b/portal.html
@@ -17,6 +17,7 @@ h1, h2, h3, h4, h5, h6, p, i, b, q, strong, span {
 h1, h2, h3 {
 	text-align: center;
 	opacity: 0;
+	transition: 0.4s;
 }
 h1:hover {
 	color: green;
