--- a/portal.html
+++ b/portal.html
@@ -34,13 +34,13 @@ ul li {
 	cursor: pointer;
 	max-width: 500px;
 }
-ul li:hover {
+ul li a:hover {
 	color: #00F600;
 	background: gray;
 	padding: 2px;
 	border-radius: 4px;
 }
-ul li:active {
+ul li a:active {
 	color: white;
 }
 div {
@@ -81,6 +81,7 @@ section {
 <ul>
 	<li><a href="./experimental/RandomBinGenerator.html">Random Binary Generator</a></li>
 	<li><a href="./experimental/sociablePairFinder.html">Sociable Pair Finder</a></li>
+	<li><a href="./experimental/terminal.html">Terminal</a></li>
 </ul>
 
 <div>
