--- a/portal.html
+++ b/portal.html
@@ -33,6 +33,8 @@ ul li a {
 	transition: all 0.3s;
 	cursor: pointer;
 	max-width: 500px;
+	text-decoration: none;
+	color: blue;
 }
 ul li a:hover {
 	color: #00F600;
