--- a/beta/SCPDCALC.html
+++ b/beta/SCPDCALC.html
@@ -2,6 +2,9 @@
 <html>
 <head>
 <title>SCIPRED'S CALCULATOR</title>
+<meta charset="UTF-8">
+<meta name="description" content="SciPred's Calculator">
+<meta name="author" content="SciPred">
 <style>
 html, body {
 	width: 100%;
