--- a/portal.html
+++ b/portal.html
@@ -2,6 +2,9 @@
 <html>
 <head>
 <title>SCIPRED'S PORTAL</title>
+<meta charset="UTF-8">
+<meta name="description" content="SciPred's Portal">
+<meta name="author" content="SciPred">
 <style>
 html, body {
 	width: 100%;
