--- a/alpha/achv2.html
+++ b/alpha/achv2.html
@@ -3,6 +3,7 @@
 <head>
 <!-- OK, WHAT DO YOU THINK YOU'RE DOING?! -->
 <title>ACHIEVO</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 html, body {
 	margin: 0;
