--- a/beta/SCPDCALC.html
+++ b/beta/SCPDCALC.html
@@ -5,6 +5,7 @@
 <meta charset="UTF-8">
 <meta name="description" content="SciPred's Calculator">
 <meta name="author" content="SciPred">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 html, body {
 	width: 100%;
