--- a/experimental/terminal.html
+++ b/experimental/terminal.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html><head>
 <title>SciPred's Terminal 2020</title>
+<meta charset="UTF-8">
+<meta name="description" content="SciPred's Calculator">
+<meta name="author" content="SciPred">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 html {background-color:black;color:#00E600;font-size:20px;font-family:"Courier",Courier New,monospace;width:100%;height:100%;margin:0;}
 blockquote {width:97%;margin:auto;height:460px;border:2px solid gray;padding:10px;overflow:auto;}
