--- a/portal.html
+++ b/portal.html
@@ -5,6 +5,8 @@
 <meta charset="UTF-8">
 <meta name="description" content="SciPred's Portal">
 <meta name="author" content="SciPred">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="icon" type="image/png" href="resources/logo.png" />
 <style>
 html, body {
 	width: 100%;
