--- a/portal.html
+++ b/portal.html
@@ -3,7 +3,7 @@
 <head>
 <title>SCIPRED'S PORTAL</title>
 <meta charset="UTF-8">
-<meta name="description" content="SciPred's Portal">
+<meta name="description" content="SciPred's Portal to his Contributions. Thanks Hobo">
 <meta name="author" content="SciPred">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="icon" type="image/png" href="resources/logo.png" />
