--- a/beta/SCPDCALC.html
+++ b/beta/SCPDCALC.html
@@ -3,7 +3,7 @@
 <head>
 <title>SCIPRED'S CALCULATOR</title>
 <meta charset="UTF-8">
-<meta name="description" content="SciPred's Calculator">
+<meta name="description" content="A calculator unlike any other...">
 <meta name="author" content="SciPred">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
