--- a/portal.html
+++ b/portal.html
@@ -66,6 +66,7 @@ section {
 	height: 0;
 	border: 1px dashed black;
 	margin: auto;
+	overflow: auto;
 }
 </style>
 </head>
@@ -92,7 +93,7 @@ section {
 	<li><a href="./experimental/terminal.html">Terminal</a></li>
 </ul>
 
-<div>
+<div onclick="changeDisplay()">
 	<h5 style="color:blue">About the Developer</h5>
 	<p>SciPred is some random person who likes eating virtual cookies and playing Minecraft (when he's not hacking any game servers). He shoots Fortnite for entertainment and watches on YouTube for dividing by zero. Whenever he's not looking at pictures of hobos, he wastes tons of paper trying to find the answer to 0 to the power of 0.</p>
 </div>
@@ -102,7 +103,7 @@ function openNav() {
 	document.getElementsByTagName('div')[0].style.width = "80%";
 	document.getElementsByTagName('div')[0].style.background = "black";
 	document.getElementsByTagName('div')[0].style.border = "2px solid black";
-	document.getElementsByTagName('section')[0].style.height = "30%";
+	document.getElementsByTagName('section')[0].style.height = "35%";
 	document.body.style.background = "#eee";
 	setTimeout(function(){
 		document.getElementsByTagName('p')[0].style.opacity = 1;
@@ -114,6 +115,23 @@ function openNav() {
 	}, 500);
 }
 setTimeout(openNav, 700);
+
+var displayText = 0;
+function changeDisplay() {
+	if (displayText === 0) {
+		displayText = 1;
+		document.getElementsByTagName('div')[0].innerHTML = `
+			<h5 style="color:red">About the Hobo</h5>
+			<p>The Hobo is a trustable friend who keeps on threatening to torture me, although I don't really mind. Whenever he's not trying to destroy me he plays Minecraft Windows 10 Edition, along with some other friends.</p>
+		`;
+	}
+	else {
+		document.getElementsByTagName('div')[0].innerHTML = `
+			<h5 style="color:blue">About the Developer</h5>
+			<p>SciPred is some random person who likes eating virtual cookies and playing Minecraft (when he's not hacking any game servers). He shoots Fortnite for entertainment and watches on YouTube for dividing by zero. Whenever he's not looking at pictures of hobos, he wastes tons of paper trying to find the answer to 0 to the power of 0.</p>
+		`;
+	}
+}
 </script>
 
 </body>
