--- a/portal.html
+++ b/portal.html
@@ -123,15 +123,15 @@ function changeDisplay() {
 	if (displayText === 0) {
 		displayText = 1;
 		document.getElementsByTagName('div')[0].innerHTML = `
-			<h5 style="color:red">About the Hobo</h5>
-			<p>The Hobo is a trustable friend who keeps on threatening to torture me, although I don't really mind. Whenever he's not trying to destroy me he plays Minecraft Windows 10 Edition, along with some other friends.</p>
+			<h5 style="color:red" style="opacity:1">About the Hobo</h5>
+			<p style="opacity:1">The Hobo is a trustable friend who keeps on threatening to torture me, although I don't really mind. Whenever he's not trying to destroy me he plays Minecraft Windows 10 Edition, along with some other friends.</p>
 		`;
 	}
 	else {
 		displayText = 0;
 		document.getElementsByTagName('div')[0].innerHTML = `
-			<h5 style="color:blue">About the Developer</h5>
-			<p>SciPred is some random person who likes eating virtual cookies and playing Minecraft (when he's not hacking any game servers). He shoots Fortnite for entertainment and watches on YouTube for dividing by zero. Whenever he's not looking at pictures of hobos, he wastes tons of paper trying to find the answer to 0 to the power of 0.</p>
+			<h5 style="color:blue" style="opacity:1">About the Developer</h5>
+			<p style="opacity:1">SciPred is some random person who likes eating virtual cookies and playing Minecraft (when he's not hacking any game servers). He shoots Fortnite for entertainment and watches on YouTube for dividing by zero. Whenever he's not looking at pictures of hobos, he wastes tons of paper trying to find the answer to 0 to the power of 0.</p>
 		`;
 	}
 }
