--- a/portal.html
+++ b/portal.html
@@ -69,9 +69,34 @@ section {
 	border: 1px dashed black;
 	margin: auto;
 }
-aside {
+#lists {
 	opacity: 0;
 	transition: 0.5s;
+}
+#noos {
+	width: 10%;
+	background: white;
+	position: fixed;
+	height: 10%;
+	z-index: 1;
+	bottom: 0;
+	right: 0;
+	opacity: 0.2;
+	transition: 0.4s;
+	overflow: hidden;
+}
+#noos p {
+	opacity: 0;
+}
+#noos:hover {
+	opacity: 1;
+	width: 30%;
+	height: 20%;
+	overflow: auto;
+	padding: 7px;
+}
+#noos:hover p {
+	opacity: 1;
 }
 </style>
 </head>
@@ -82,9 +107,10 @@ aside {
 <h2>A Document for Exploring All of his Works</h2>
 <h3>Includes Everything Alpha, Beta, and Experimental.</h3>
 <h3 style="color:red">PLEASE NOTE: The guy is still working hard on farming Minecraft Skywars Coins, so updates may be delayed.</h3>
+<h3 style="color:blue">Also, some documents, such as SciPred's Calculator, will not work properly on mobile devices because the developer is too lazy to adjust the CSS.</h3>
 </section>
 
-<aside>
+<aside id="lists">
 <h4>MAJOR PROJECTS</h4>
 <ul>
 	<li><a href="./alpha/achv2.html">Achievofile</a></li>
@@ -105,6 +131,10 @@ aside {
 	<p>SciPred is some random person who likes eating virtual cookies and playing Minecraft (when he's not hacking any game servers). He shoots Fortnite for entertainment and watches on YouTube for dividing by zero. Whenever he's not looking at pictures of hobos, he wastes tons of paper trying to find the answer to 0 to the power of 0.</p>
 </div>
 
+<aside id="noos">
+	<p id="allio"></p>
+</aside>
+
 <script>
 function openNav() {
 	document.getElementsByTagName('div')[0].style.width = "80%";
@@ -114,13 +144,13 @@ function openNav() {
 	document.getElementsByTagName('section')[0].style.overflowY = "auto";
 	document.body.style.background = "#eee";
 	setTimeout(function(){
-		document.getElementsByTagName('p')[0].style.opacity = 1;
+		document.getElementsByTagName('p')[1].style.opacity = 1;
 		document.getElementsByTagName('h5')[0].style.opacity = 1;
 		document.getElementsByTagName('h1')[0].style.opacity = 1;
 		document.getElementsByTagName('h2')[0].style.opacity = 1;
 		document.getElementsByTagName('h3')[0].style.opacity = 1;
 		document.getElementsByTagName('h3')[1].style.opacity = 1;
-		document.getElementsByTagName('aside')[0].style.opacity = 1;
+		document.getElementById('lists').style.opacity = 1;
 	}, 500);
 }
 setTimeout(openNav, 700);
@@ -140,6 +170,19 @@ function changeDisplay() {
 		`;
 	}
 }
+
+function choose(arr) {return arr[Math.floor(Math.random()*arr.length)];}
+function nooos() {
+	var p = document.getElementById("allio");
+	p.innerHTML = choose([
+		"'SciPred eats too many cookies', complains reporter.",
+		"Cookie Clicker recieving too much lag; Orteil desperate to fix the JavaScript.",
+		"Hobo accused of stealing 3 cardboard boxes; Judges argue on his innocence.",
+		"SciPred seen importing hacked cookies into Cookie Clicker database.",
+		"Dog bites Hobo mistaking him for bones. 'That dog should be rewarded,' a passerby said."
+	]);
+}
+setInterval(nooos, 5000);
 </script>
 
 </body>
