--- a/portal.html
+++ b/portal.html
@@ -179,7 +179,9 @@ function nooos() {
 		"Cookie Clicker recieving too much lag; Orteil desperate to fix the JavaScript.",
 		"Hobo accused of stealing 3 cardboard boxes; Judges argue on his innocence.",
 		"SciPred seen importing hacked cookies into Cookie Clicker database.",
-		"Dog bites Hobo mistaking him for bones. 'That dog should be rewarded,' a passerby said."
+		"Dog bites Hobo mistaking him for bones. 'That dog should be rewarded,' a passerby said.",
+		"Opti files report against SciPred; jury calls in the governors.",
+		"Fellow Martin argues against payment for Minecraft Windows 10 Edition. 'The price is crap,' he complains."
 	]);
 }
 setInterval(nooos, 5000);
