--- a/portal.html
+++ b/portal.html
@@ -150,6 +150,7 @@ function openNav() {
 		document.getElementsByTagName('h2')[0].style.opacity = 1;
 		document.getElementsByTagName('h3')[0].style.opacity = 1;
 		document.getElementsByTagName('h3')[1].style.opacity = 1;
+		document.getElementsByTagName('h3')[2].style.opacity = 1;
 		document.getElementById('lists').style.opacity = 1;
 	}, 500);
 }
@@ -181,7 +182,8 @@ function nooos() {
 		"SciPred seen importing hacked cookies into Cookie Clicker database.",
 		"Dog bites Hobo mistaking him for bones. 'That dog should be rewarded,' a passerby said.",
 		"Opti files report against SciPred; jury calls in the governors.",
-		"Fellow Martin argues against payment for Minecraft Windows 10 Edition. 'The price is crap,' he complains."
+		"Fellow Martin argues against payment for Minecraft Windows 10 Edition. 'The price is crap,' he complains.",
+		"Mojang lowers price; 8-year-olds scramble to get their parents' credit cards."
 	]);
 }
 setInterval(nooos, 5000);
