--- a/portal.html
+++ b/portal.html
@@ -144,7 +144,7 @@ function openNav() {
 	document.getElementsByTagName('section')[0].style.overflowY = "auto";
 	document.body.style.background = "#eee";
 	setTimeout(function(){
-		document.getElementsByTagName('p')[1].style.opacity = 1;
+		document.getElementsByTagName('p')[0].style.opacity = 1;
 		document.getElementsByTagName('h5')[0].style.opacity = 1;
 		document.getElementsByTagName('h1')[0].style.opacity = 1;
 		document.getElementsByTagName('h2')[0].style.opacity = 1;
@@ -183,7 +183,8 @@ function nooos() {
 		"Dog bites Hobo mistaking him for bones. 'That dog should be rewarded,' a passerby said.",
 		"Opti files report against SciPred; jury calls in the governors.",
 		"Fellow Martin argues against payment for Minecraft Windows 10 Edition. 'The price is crap,' he complains.",
-		"Mojang lowers price; 8-year-olds scramble to get their parents' credit cards."
+		"Mojang lowers price; 8-year-olds scramble to get their parents' credit cards.",
+		"SciPred adds new experimental document; user complains of virus in the HTML."
 	]);
 }
 setInterval(nooos, 5000);
