--- a/portal.html
+++ b/portal.html
@@ -159,6 +159,7 @@ function openNav() {
 		document.getElementsByTagName('h3')[0].style.opacity = 1;
 		document.getElementsByTagName('h3')[1].style.opacity = 1;
 		document.getElementsByTagName('h3')[2].style.opacity = 1;
+		document.getElementsByTagName('h5')[0].style.opacity = 1;
 		document.getElementById('lists').style.opacity = 1;
 	}, 500);
 }
