--- a/portal.html
+++ b/portal.html
@@ -131,18 +131,6 @@ section {
 	<p>SciPred is some random person who likes eating virtual cookies and playing Minecraft (when he's not hacking any game servers). He shoots Fortnite for entertainment and watches on YouTube for dividing by zero. Whenever he's not looking at pictures of hobos, he wastes tons of paper trying to find the answer to 0 to the power of 0.</p>
 </div>
 
-<h5>You can Email the Developer here:</h5>
-<form action="mailto:mrsimple.mcpe@gmail.com" method="post" enctype="text/plain">
-Name:<br>
-<input type="text" name="name"><br>
-E-mail:<br>
-<input type="text" name="mail"><br>
-Comment:<br>
-<input type="text" name="comment" size="50"><br><br>
-<input type="submit" value="Send">
-<input type="reset" value="Reset">
-</form>
-
 <script>
 function openNav() {
 	document.getElementsByTagName('div')[0].style.width = "80%";
@@ -159,7 +147,6 @@ function openNav() {
 		document.getElementsByTagName('h3')[0].style.opacity = 1;
 		document.getElementsByTagName('h3')[1].style.opacity = 1;
 		document.getElementsByTagName('h3')[2].style.opacity = 1;
-		document.getElementsByTagName('h5')[1].style.opacity = 1;
 		document.getElementById('lists').style.opacity = 1;
 	}, 500);
 }
@@ -170,7 +157,7 @@ function changeDisplay() {
 	if (displayText === 0) {
 		displayText = 1;
 		document.getElementsByTagName('div')[0].innerHTML = `
-			<p style="opacity:1">The Hobo is a trustable friend who keeps on threatening to torture me, although I don't really mind. Whenever he's not trying to destroy me he plays Minecraft Windows 10 Edition, along with some other friends.</p>
+			<p style="opacity:1">The Hobo is a trustable friend who keeps on threatening to torture me, although I don't really mind. Whenever he's not trying to destroy me he plays Minecraft Windows 10 Edition, along with some other friends. (Just a bit of a problem: I don't.)</p>
 		`;
 	}
 	else {
