--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-<title>SCIPRED'S PORTAL</title>
+<title>SCIPRED'S DOMAIN</title>
 <meta charset="UTF-8">
 <meta name="description" content="SciPred's Portal to his Contributions. Thanks Hobo">
 <meta name="author" content="SciPred">
@@ -103,7 +103,7 @@ section {
 <body>
 
 <section>
-<h1>Welcome To SciPred's Portal</h1>
+<h1>Welcome To SciPred's Domain</h1>
 <h2>A Document for Exploring All of his Works</h2>
 <h3>Includes Everything Alpha, Beta, and Experimental.</h3>
 <h3 style="color:red">PLEASE NOTE: The guy is still working hard on farming Minecraft Skywars Coins, so updates may be delayed.</h3>
