--- a/experimental/RandomBinGenerator.html
+++ b/experimental/RandomBinGenerator.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>RBG</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!-- UNDER EXPERIMENTATION OF SCIPRED -->
 <style>
 html {background: black;}
