--- a/experimental/sociablePairFinder.html
+++ b/experimental/sociablePairFinder.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>SPF</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 <button onclick="startCount()" style="position:fixed;background:white;border:2px solid black;top:0;right:0;padding:5px;" id="btnStart">START</button>
