--- a/beta/SCPDCALC.html
+++ b/beta/SCPDCALC.html
@@ -14,7 +14,7 @@ html, body {
 	background: #ddd;
 	font-family: sans-serif;
 	text-align: center;
-	overflow: hidden;
+	overflow: auto;
 	padding-left: 4px;
 	padding-right: 4px;
 }
