--- a/index.html
+++ b/index.html
@@ -107,11 +107,11 @@ section {
 <h2>A Document for Exploring All of his Works</h2>
 <h3>Includes Everything Alpha, Beta, and Experimental.</h3>
 <h3 style="color:red">PLEASE NOTE: The guy is still working hard on farming Minecraft Skywars Coins, so updates may be delayed.</h3>
-<h3 style="color:blue">Also, some documents, such as SciPred's Calculator, will not work properly on mobile devices because the developer is too lazy to adjust the CSS.</h3>
+<h3 style="color:blue">Also, some documents will not work properly on mobile devices because the developer is too lazy to adjust the CSS and JS, especially when it comes to the Major Projects.</h3>
 </section>
 
 <aside id="lists">
-<h4>MAJOR PROJECTS</h4>
+<h4>MAJOR PROJECTS (Mobile Alert)</h4>
 <ul>
 	<li><a href="./alpha/achv2.html">Achievofile</a></li>
 
