--- a/index.html
+++ b/index.html
@@ -131,6 +131,8 @@ section {
 	<p>SciPred is some random person who likes eating virtual cookies and playing Minecraft (when he's not hacking any game servers). He shoots Fortnite for entertainment and watches on YouTube for dividing by zero. Whenever he's not looking at pictures of hobos, he wastes tons of paper trying to find the answer to 0 to the power of 0.</p>
 </div>
 
+<p>Special Thanks to the Hobo</p>
+
 <script>
 function openNav() {
 	document.getElementsByTagName('div')[0].style.width = "80%";
@@ -141,6 +143,7 @@ function openNav() {
 	document.body.style.background = "#eee";
 	setTimeout(function(){
 		document.getElementsByTagName('p')[0].style.opacity = 1;
+		document.getElementsByTagName('p')[1].style.opacity = 1;
 		document.getElementsByTagName('h5')[0].style.opacity = 1;
 		document.getElementsByTagName('h1')[0].style.opacity = 1;
 		document.getElementsByTagName('h2')[0].style.opacity = 1;
@@ -148,9 +151,9 @@ function openNav() {
 		document.getElementsByTagName('h3')[1].style.opacity = 1;
 		document.getElementsByTagName('h3')[2].style.opacity = 1;
 		document.getElementById('lists').style.opacity = 1;
-	}, 500);
+	}, 600);
 }
-setTimeout(openNav, 700);
+setTimeout(openNav, 600);
 
 var displayText = 0;
 function changeDisplay() {
