--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>SCIPRED'S DOMAIN</title>
 <meta charset="UTF-8">
-<meta name="description" content="SciPred's Portal to his Contributions. Thanks Hobo and Oshen Man">
+<meta name="description" content="SciPred's Domain. Thanks Hobo and Oshen Man">
 <meta name="author" content="SciPred">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="icon" type="image/png" href="resources/logo.png" />
