--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>SCIPRED'S DOMAIN</title>
 <meta charset="UTF-8">
-<meta name="description" content="SciPred's Domain. Thanks Hobo and Oshen Man">
+<meta name="description" content="SciPred's Domain. Thanks people">
 <meta name="author" content="SciPred">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="icon" type="image/png" href="resources/logo.png" />
@@ -107,14 +107,14 @@ section {
 <h2>A Document for Exploring All of his Works</h2>
 <h3>Includes Everything Alpha, Beta, and Experimental.</h3>
 <h3 style="color:red">PLEASE NOTE: The guy is still working hard on farming Minecraft Skywars Coins, so updates may be delayed.</h3>
-<h3 style="color:blue">Also, some documents will not work properly on mobile devices because the developer is too lazy to adjust the CSS and JS, especially when it comes to the Major Projects.</h3>
+<h3 style="color:blue">Also, some documents will not work properly on mobile devices because the developer is too lazy to adjust the CSS and JS, especially when it comes to the PC Projects.</h3>
 </section>
 
 <aside id="lists">
-<h4>MAJOR PROJECTS (Mobile Alert)</h4>
+<h4>PC PROJECTS</h4>
 <ul>
 	<li><a href="./alpha/achv2.html">Achievofile</a></li>
-
+	<li><a href="./beta/DeathMessages.html">Random Death Message Generator</a></li>
 	<li><a href="./beta/SCPDCALC.html">SciPred's Calculator</a></li>
 </ul>
 
