--- a/beta/DeathMessages.html
+++ b/beta/DeathMessages.html
@@ -205,7 +205,7 @@ function generateMessage() {
 		msg = name1 + choose(FanaticalDMs);
 	}
 	if (dmtype === "ISOLATED") {
-		msg = name1 + choose(IsolatedDMs) + name2;
+		msg = name1 + choose(IsolatedDMs);
 	}
 	if (dmtype === "KILLED") {
 		msg = name1 + choose(KilledDMs) + name2;
