--- a/beta/DeathMessages.html
+++ b/beta/DeathMessages.html
@@ -84,7 +84,7 @@ var KilledDMs = [
 	" was drugged by ",
 	" was eaten by ",
 	" was murdered in his sleep by ",
-	" was sent to a concentration camp",
+	" was sent to a concentration camp by ",
 	" was shot in a duel against ",
 	" was slain in battle by ",
 	" was stabbed in his sleep by "
