--- a/index.html
+++ b/index.html
@@ -114,8 +114,12 @@ section {
 <h4>PC PROJECTS</h4>
 <ul>
 	<li><a href="./alpha/achv2.html">Achievofile</a></li>
-	<li><a href="./beta/DeathMessages.html">Random Death Message Generator</a></li>
 	<li><a href="./beta/SCPDCALC.html">SciPred's Calculator</a></li>
+</ul>
+
+<h4>MAJOR PROJECTS</h4>
+<ul>
+	<li><a href="./beta/DeathMessages.html">Random Death Message Generator</a></li>
 </ul>
 
 <h4>EXPERIMENTAL</h4>
