--- a/beta/DeathMessages.html
+++ b/beta/DeathMessages.html
@@ -76,6 +76,7 @@ var ExecutedDMs = [
 	" was tortured to death"
 ];
 var FanaticalDMs = [
+	" became a werewolf",
 	" was carried away by some fairies",
 	" was poisoned by a witch",
 	" was slain by Robin Hood",
@@ -192,7 +193,8 @@ var SciFiDMs = [
 	"'s body was cut during teleportation",
 	"'s body combined with an alien to make an unknown entity",
 	" died from a flesh-eating virus",
-	" turned into a zombie"
+	" turned into a zombie",
+	" turned into an alien",
 	" was blasted to bits by an alien gun",
 	" was eaten by a Martian",
 	" was turned to dust by lasers"
