--- a/beta/DeathMessages.html
+++ b/beta/DeathMessages.html
@@ -14,6 +14,7 @@ html, body {
 	background: #eee;
 	font-family: sans-serif;
 	text-align: center;
+	overflow-x: hidden;
 }
 h1, h2, h3, h4, h5, h6, p, i, b, q, strong, span {
 	cursor: default;
@@ -76,7 +77,7 @@ var ExecutedDMs = [
 	" was tortured to death"
 ];
 var FanaticalDMs = [
-	" became a werewolf",
+	" became a werewolf and was shot by a hunter",
 	" was carried away by some fairies",
 	" was poisoned by a witch",
 	" was slain by Robin Hood",
@@ -106,6 +107,7 @@ var KilledDMs = [
 	" was hit in the eye with an arrow by ",
 	" was left on a far-out island by ",
 	" was murdered in his sleep by ",
+	" was poisoned by ",
 	" was sent to a concentration camp by ",
 	" was shot by a criminal gang under the command of ",
 	" was shot in a duel against ",
@@ -210,7 +212,7 @@ var ScientificDMs = [
 <h1>RANDOM DEATH MESSAGE GENERATOR</h1>
 <h2>A very weird document by SciPred</h2>
 <h4 style="color:red">Do not take this seriously. This is only a joke. Only the homies will understand who the people are.</h4>
-<h4 style="color:blue">Version: 1.01</h4>
+<h4 style="color:blue">Version: 1.02</h4>
 <hr>
 <h3>Choose your type:</h3>
 <br>
@@ -231,6 +233,7 @@ var ScientificDMs = [
 	//i dont want to simplify this leave me be
 function generateMessage() {
 	let p = document.getElementById("msgcontainer");
+	let h = document.getElementById("historycontainer");
 	let name1 = choose(Names);
 	let name2 = choose(Names);
 	while (name2 === name1) {name2 = choose(Names);}
@@ -273,6 +276,7 @@ function generateMessage() {
 		msg = name1 + choose(ScientificDMs);
 	}
 	p.innerHTML = msg;
+	h.innerHTML += msg + "<br>";
 	if (reverto === 1) {
 		dmtype = "ALL";
 	}
@@ -281,6 +285,13 @@ function generateMessage() {
 
 <button onclick="generateMessage()" style="padding:7px;font-family:'Courier',Courier New,monospace;font-size:15px;">GENERATE!</button>
 <p id="msgcontainer"></p>
+
+<hr>
+
+<div style="background:white;border:1px dashed black;width:100%;height:30%;padding-top:10px;padding-bottom:10px;overflow:auto;position:fixed;bottom:0">
+<h2>History</h2>
+<p id="historycontainer"></p>
+</div>
 
 </body>
 </html>
