--- a/beta/DeathMessages.html
+++ b/beta/DeathMessages.html
@@ -38,6 +38,7 @@ function choose(arr) {return arr[Math.floor(Math.random()*arr.length)];}
 var Names = ["Hobo", "Oshen Man", "Caesar", "Shenman", "Calcium", "Jeffyboi", "SciPred"];
 var Modes = ["ACCIDENTAL", "DISEASED", "EXECUTED", "FANATICAL", "ISOLATED", "KILLED", "MEMED", "MENTAL", "MINECRAFT", "SCI-FI", "SCIENTIFIC"];
 var AccidentalDMs = [
+	" choked to death",
 	" fell from the top of a building",
 	" fell into a pool and didn't know how to swim",
 	" fell into a snake pit",
@@ -60,6 +61,8 @@ var DiseasedDMs = [
 	" was infected with an unknown virus"
 ];
 var ExecutedDMs = [
+	" choked on a piece of bread at a trial",
+	" drowned at a witch trial",
 	" was burned at the stake",
 	" was burned for witchcraft",
 	" was clubbed to death",
@@ -288,10 +291,8 @@ function generateMessage() {
 
 <hr>
 
-<div style="background:white;border:1px dashed black;width:100%;height:30%;padding-top:10px;padding-bottom:10px;overflow:auto;position:fixed;bottom:0">
 <h2>History</h2>
 <p id="historycontainer"></p>
-</div>
 
 </body>
 </html>
