--- a/beta/DeathMessages.html
+++ b/beta/DeathMessages.html
@@ -3,7 +3,7 @@
 <head>
 <title>RANDOM DEATH MESSAGES</title>
 <meta charset="UTF-8">
-<meta name="description" content="Random Death Message Generator by SciPred.">
+<meta name="description" content="Random Death Message Generator by SciPred. Beta Version 1.03">
 <meta name="author" content="SciPred">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
@@ -51,7 +51,8 @@ var AccidentalDMs = [
 	" was crushed by a piston",
 	" was hit by a train",
 	" was hit in the head with a discharged rifle",
-	" was mistaken for a witch"
+	" was mistaken for a witch",
+	" was pushed too hard on a nail bed"
 ];
 var DiseasedDMs = [
 	" became rabid",
@@ -60,7 +61,9 @@ var DiseasedDMs = [
 	" died of coronavirus",
 	" died of dysentery",
 	" farted, popping a blood vessel and dying from the injury",
+	" had a stomach worm that grew too big",
 	" had a stroke",
+	" had gout",
 	" had multiple sclerosis",
 	" was infected with a virus sample from the CDC",
 	" was infected with an unknown virus"
@@ -69,10 +72,12 @@ var ExecutedDMs = [
 	" choked on a piece of bread at a trial",
 	" drowned at a witch trial",
 	" had a pitchfork struck into his throat",
+	" had all his limbs amputated",
 	" had his throat slit open",
 	" was buried alive",
 	" was burned at the stake",
 	" was burned for witchcraft",
+	" was choked on a wooden fork",
 	" was clubbed to death",
 	" was crushed by a pile of rocks",
 	" was electrified in the electric chair",
@@ -90,10 +95,12 @@ var ExecutedDMs = [
 	" was thrown to the lions",
 	" was thrown to the sharks",
 	" was tied to a cannon and blown apart",
-	" was tortured to death"
+	" was tortured to death",
+	" was whipped too hard with a cat-o-nine-tails"
 ];
 var FanaticalDMs = [
 	" became a werewolf and was shot by a hunter",
+	" felt the mummy's curse",
 	" was carried away by some fairies",
 	" was cursed by an ancient spell",
 	" was poisoned by a witch",
@@ -101,6 +108,7 @@ var FanaticalDMs = [
 	" was stabbed by some angry pixies"
 ];
 var IsolatedDMs = [
+	"'s cause of death is unknown",
 	" became psychotic",
 	" died in prison",
 	" died lonely",
@@ -108,13 +116,16 @@ var IsolatedDMs = [
 	" died of depression",
 	" died of hypothermia",
 	" died of laughter",
+	" died of old age",
 	" died of shock",
 	" died of starvation",
 	" died of thirst",
 	" got stuck in the doldrums",
 	" hanged himself",
 	" poisoned himself",
-	" tried to speak with his throat open"
+	" shot himself",
+	" tried to speak with his throat open",
+	" wondered what the inside of a lion looked like"
 ];
 var KilledDMs = [
 	"'s body was mutilated by ",
@@ -125,13 +136,16 @@ var KilledDMs = [
 	" died in a joust against ",
 	" got his neck cracked by ",
 	" had his throat slit by ",
+	" stepped on a landmine placed by ",
 	" was assassinated by ",
 	" was bitten by a rabid dog belonging to ",
 	" was blasted to bits by a bomb thrown by ",
 	" was blasted off into mid-air by a rocket launched by ",
 	" was blown to pieces by a cannonball launched by ",
 	" was bored to death from lectures given by ",
+	" was branded too hard with a red-hot poker by ",
 	" was butchered by ",
+	" was crucified by ",
 	" was crusaded by the knight ",
 	" was decapitated by ",
 	" was drugged by ",
@@ -139,10 +153,14 @@ var KilledDMs = [
 	" was electrified by",
 	" was hit in the eye with an arrow by ",
 	" was hit on the forehead with a pebble by ",
+	" was hit on the head with a brick thrown by ",
 	" was left on a far-out island by ",
 	" was murdered in his sleep by ",
 	" was pierced by a javelin thrown by ",
 	" was poisoned by ",
+	" was poked with a poisoned umbrella by ",
+	" was pummeled by ",
+	" was repeatedly whipped by ",
 	" was sent to a concentration camp by ",
 	" was shot by a criminal gang under the command of ",
 	" was shot in a duel against ",
@@ -157,6 +175,7 @@ var MemedDMs = [
 	" failed a 360 degree turn",
 	" flexed too hard",
 	" heard 'I like trains' too late",
+	" heard someone say 'Piano!'",
 	" joined a retarded ASMR",
 	" noscoped himself",
 	" smoked too much weed everyday",
@@ -245,20 +264,27 @@ var SciFiDMs = [
 	"'s body was cut during teleportation",
 	"'s body combined with an alien to make an unknown entity",
 	" died from a flesh-eating virus",
+	" tried to detect the aether",
+	" tried to enter the source code",
 	" turned into a zombie",
 	" turned into an alien",
 	" was blasted off into deep space",
 	" was blasted to bits by an alien gun",
 	" was eaten by a Martian",
+	" was killed by a Xenomorph",
 	" was turned to dust by lasers",
+	" went too far in a lucid dream",
 	" wore an unclean Hazmat suit"
 ];
 var ScientificDMs = [
 	" fell into a black hole",
+	" froze in space",
 	" was blasted to bits by a particle accelerator",
 	" was frozen in absolute zero",
 	" was obliterated by a solar flare",
 	" was poisoned by radiation",
+	" was scalded by muriatic acid",
+	" was sucked into Jupiter's gravity",
 	" went at the speed of light",
 	" went too close to a supernova"
 ];
@@ -268,7 +294,7 @@ var ScientificDMs = [
 <h1>RANDOM DEATH MESSAGE GENERATOR</h1>
 <h2>A very weird document by SciPred</h2>
 <h4 style="color:red">Do not take this seriously. This is only a joke. Only the homies will understand who the people are.</h4>
-<h4 style="color:blue">Version: 1.02</h4>
+<h4 style="color:blue">Version: 1.03</h4>
 <hr>
 <h3>Choose your type:</h3>
 <br>
